@@ -17,8 +17,10 @@ base-installer (1.36) UNRELEASED; urgency=low
 
   [ Frans Pop ]
   * Re-implement the use of log-output using the new version written in C.
+  * Remove hard-coded redirection to /var/log/messages in run-debootstrap so
+    that log-output in the postinst can do its work.
 
- -- Joey Hess <joeyh@debian.org>  Thu, 20 Oct 2005 12:38:04 -0400
+ -- Frans Pop <fjp@debian.org>  Fri, 21 Oct 2005 17:49:44 +0200
 
 base-installer (1.35) unstable; urgency=low
 
